--- a/README.rdoc
+++ b/README.rdoc
@@ -1,19 +1,22 @@
-= hostmanager
+= Hostmanager
 
-Description goes here.
+== Summary
 
-== Contributing to hostmanager
- 
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it.
-* Fork the project.
-* Start a feature/bugfix branch.
-* Commit and push until you are happy with your contribution.
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+A class and command line utility that allows simple management of ssh hosts and remote folders. E.g. logging in to a remote server becomes as easy as 'hm l y'.
 
-== Copyright
+== Examples
 
-Copyright (c) 2012 Edmund Highcock. See LICENSE.txt for
-further details.
+ hm add m myname@myhost
+ hm x m
+ hm list
+ hm scp m:my_file h:. 
+
+== Command Manual
+
+=== Commands
+
+  hm add <letter> myname@myhost.com --- Add a host to be referred to with <letter>
+  hm list -- List all hosts
+  hm x <letter> 
+
 
